--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
       "body-parser": "^1.18.1"
    },
    "devDependencies": {
-      "ts-node": "3.3.0",
       "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
+      "tslint": "^5.11.0",
       "typescript": "2.5.2"
    }
 }
