remove unused code (see @oscar-g/job-board-server)

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
    "name": "job-board-api",
    "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
+   "description": "Controllers, entities, forms for a job board",
+   "main": "src/index.ts",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/index.ts"
@@ -10,21 +10,23 @@
    "author": "Oscar Gonzalez <contact@oscargonalez.info>",
    "license": "MIT",
    "dependencies": {
-      "body-parser": "^1.18.1",
       "class-transformer": "^0.1.9",
-      "express": "^4.15.4",
-      "joi": "^13.5.2",
-      "pg": "^7.4.3",
+      "joi": "^13.6.0",
       "reflect-metadata": "^0.1.10",
-      "ts-option": "^1.1.5",
-      "typeorm": "0.2.7"
+      "ts-option": "^1.1.5"
+    },
+    "devDependencies": {
+        "@types/express": "^4.16.0",
+        "@types/joi": "^13.4.2",
+        "@types/node": "^8.10.24",
+        "ts-node": "^3.3.0",
+        "tslint": "^5.11.0",
+        "typescript": "^2.9.2",
+        "express": "^4.16.3",
+        "typeorm": "^0.2.7"
    },
-   "devDependencies": {
-      "@types/joi": "^13.4.1",
-      "@types/express": "^4.16.0",
-      "@types/node": "^8.10.24",
-      "ts-node": "^3.3.0",
-      "tslint": "^5.11.0",
-      "typescript": "^2.9.2"
+   "peerDependencies": {
+      "typeorm": "0.2.x",
+      "express": "4.x"
    }
 }
