--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "A data API for a job board",
    "main": "src/index.ts",
    "scripts": {
+      "lint": "tslint --project ./ --fix",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "author": "Oscar Gonzalez <contact@oscargonalez.info>",
@@ -13,8 +14,8 @@
       "url": "https://github.com/oscar-g/job-board-api.git"
    },
    "dependencies": {
+      "@oscar-g/job-board-schema": "^1.0.1",
       "class-transformer": "^0.1.9",
-      "joi": "^13.6.0",
       "reflect-metadata": "^0.1.10",
       "ts-option": "^1.1.5"
    },
