--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-   "name": "@oscar-g/job-board-api",
-   "version": "1.1.0",
-   "description": "A data API for a job board",
-   "main": "src/index.ts",
-   "scripts": {
-      "lint": "tslint --project ./ --fix",
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "author": "Oscar Gonzalez <contact@oscargonalez.info>",
-   "license": "MIT",
-   "repository": {
-      "type": "git",
-      "url": "https://github.com/oscar-g/job-board-api.git"
-   },
-   "dependencies": {
-      "@oscar-g/job-board-schema": "^1.0.1",
-      "class-transformer": "^0.1.9",
-      "reflect-metadata": "^0.1.10",
-      "ts-option": "^1.1.5"
-   },
-   "devDependencies": {
-      "@types/express": "^4.16.0",
-      "@types/faker": "^4.1.2",
-      "@types/joi": "^13.4.2",
-      "@types/node": "^8.10.24",
-      "express": "^4.16.3",
-      "faker": "^4.1.0",
-      "ts-node": "^3.3.0",
-      "tslint": "^5.11.0",
-      "typeorm": "^0.2.7",
-      "typescript": "^2.9.2"
-   },
-   "peerDependencies": {
-      "typeorm": "0.2.x",
-      "express": "4.x"
-   }
+    "name": "@oscar-g/job-board-api",
+    "version": "1.1.0",
+    "description": "A data API for a job board",
+    "main": "dist/src/index.js",
+    "typings": "dist/types/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "lint": "tslint --fix 'src/**/*.ts'",
+        "prebuild": "rm -rf dist",
+        "build": "tsc",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Oscar Gonzalez <contact@oscargonalez.info>",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/oscar-g/job-board-api.git"
+    },
+    "dependencies": {
+        "ts-option": "^1.1.5",
+        "@oscar-g/job-board-schema": "^1.1.0"
+    },
+    "devDependencies": {
+        "@types/express": "^4.16.0",
+        "@types/faker": "^4.1.3",
+        "@types/joi": "^13.4.2",
+        "@types/node": "^8.10.26",
+        "class-transformer": "^0.1.9",
+        "express": "^4.16.3",
+        "faker": "^4.1.0",
+        "reflect-metadata": "^0.1.10",
+        "ts-node": "^3.3.0",
+        "tslint": "^5.11.0",
+        "typeorm": "^0.2.7",
+        "typescript": "^2.9.2"
+    },
+    "peerDependencies": {
+        "typeorm": "0.2.x",
+        "express": "4.x"
+    }
 }
