update lint config and clean up

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
+    "noUnusedLocals": true,
     "sourceMap": true,
     "declaration": true,
     "declarationDir": "dist/types",
