--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     },
     "dependencies": {
         "ts-option": "^1.1.5",
-        "@oscar-g/job-board-schema": "1.0.2"
+        "@oscar-g/job-board-schema": "1.0.2",
+        "class-transformer": "^0.1.9"
     },
     "devDependencies": {
         "@types/express": "^4.16.0",
         "@types/faker": "^4.1.3",
         "@types/joi": "^13.4.2",
         "@types/node": "^8.10.26",
-        "class-transformer": "^0.1.9",
         "express": "^4.16.3",
         "faker": "^4.1.0",
         "reflect-metadata": "^0.1.10",
